--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 			<meta http-equiv="X-UA-Compatible" content="IE=edge">
 			
+			<!-- Set toolbar color for Chrome for Android -->
+			<meta name="theme-color" content="#3943b7">
+			
 			<title>My Portfolio</title>
 			
 			<link href="css/style.css" rel="stylesheet">
